Modified variables to be more abstract for other implementations

--- a/brain-gaze-analysis/BrainGazeAnalysis.ipynb
+++ b/brain-gaze-analysis/BrainGazeAnalysis.ipynb
@@ -736,7 +736,7 @@
         }
       ],
       "source": [
-        "tableName = 'braingazeDataTable-master'\n",
+        "table_name = 'braingazeDataTable-master'\n",
         "boto3.setup_default_session(\n",
         "    aws_access_key_id=aws_access_key_id,\n",
         "    aws_secret_access_key=aws_access_secret,\n",
@@ -744,7 +744,7 @@
         ")\n",
         "\n",
         "dynamodb = boto3.resource('dynamodb')\n",
-        "table = dynamodb.Table(tableName)\n",
+        "table = dynamodb.Table(table_name)\n",
         "\n",
         "# Scan operation - this will retrieve all items in the table\n",
         "# Be careful with scan on large tables as it can consume a lot of read capacity\n",
